--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="action_settings">Settings</string>
     <string name="Nombre">Nombre</string>
     <string name="Nombresumm">Nombre de la persona</string>
-    <string name="Apellido">Apellido</string>
-    <string name="Apellidosumm">Apellido de la persona</string>
+    <string name="Edad">Edad</string>
+    <string name="Edadsumm">Edad de la persona</string>
     <string name="Genero">Genero</string>
     <string name="Generosumm">Genero de la persona</string>
     <string name="Mujer">Mujer</string>
